overflow bounce fixed maybe?

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 
 /* */
+
+html{
+  overscroll-behavior-y: none;
+
+  
+}
